@@ -110,6 +110,7 @@ void Gamemenu_gump::quit(bool return_to_menu)
 			//gwin->clear_screen(true);
 			minimized = true;
 			SDL_WM_IconifyWindow();
+			SDL_WM_IconifyWindow();
 		}
 #endif
 		return;
